# godon-images

./: .gitignore  README.md  godon-causal-build-spec.md
.github/workflows/: godon-api-ci.yml  godon-api-final.yml  godon-api-minimal.yml  godon-api-release.yml  godon-api-working.yml  godon-api.yml  godon-bench-greenhouse-ci.yml  godon-bench-greenhouse-release.yml  godon-bench-microgrid-ci.yml  godon-bench-microgrid-release.yml  godon-causal-ci.yml  godon-causal-release.yml  godon-ci-permissions.yml  godon-ci-v2.yml  godon-cli-ci.yml  godon-cli-release.yml  godon-dask-release.yml  godon-dask.yml  godon-mcp-ci.yml  godon-mcp-release.yml  godon-metrics-exporter-ci.yml  godon-metrics-exporter-release.yml  godon-metrics-exporter.yml  godon-minimal-test.yml  godon-observer-ci.yml  godon-observer-release.yml  godon-seeder-ci.yml  godon-seeder-release.yml  godon-seeder-unit-tests.yml  godon-universal-release.yml  manual-test.yml  release-image.yml
docs/: dashboard-vision.md
godon-api/: controller.py  maskfile.md  openapi.yml
godon-dask/: requirements.txt
godon-metrics-exporter/: Dockerfile  exporter.nim
godon-seeder/: Dockerfile  godon_seeder.sh
godon-universal/: requirements.txt
images/godon-api/: Cargo.toml  container_test_runner.sh  default.nix  godon_api.nimble  openapi.yml
images/godon-api/src/: config.nim  config.rs  godon_api.broken.nim  godon_api.nim  godon_api.nimble  godon_windmill_adapter.nim  handlers.nim  handlers.rs  main.rs  types.nim  types.rs  windmill_adapter.rs  windmill_client.nim
images/godon-api/tests/: README.md  test_handlers.nim  test_integration.nim  test_utils.nim
images/godon-api/tests/express-proxy/: README.md  package-lock.json  package.json  proxy.js
images/godon-bench-greenhouse/: Cargo.toml  README.md  default.nix
images/godon-bench-greenhouse/src/: main.rs  sim.rs  types.rs
images/godon-bench-microgrid/: Cargo.toml  default.nix
images/godon-bench-microgrid/src/: main.rs  sim.rs  types.rs
images/godon-causal/: Cargo.toml  default.nix
images/godon-causal/src/: artifact.rs  characterizer.rs  detector.rs  graph.rs  main.rs  query.rs  trial_reader.rs
images/godon-cli/: default.nix
images/godon-dask/: Dockerfile
images/godon-mcp/: Cargo.toml  default.nix
images/godon-mcp/src/: client.rs  config.rs  main.rs  protocol.rs  tools.rs
images/godon-metrics-exporter/: Cargo.toml  Dockerfile  default.nix  exporter.nim  godon_metrics_exporter.nimble
images/godon-metrics-exporter/src/: main.rs
images/godon-observer/: Cargo.toml  README.md  default.nix  result  result-2
images/godon-observer/src/: dashboard.html  main.rs  optuna_reader.rs
images/godon-seeder/: Cargo.toml  default.nix  example-component.yaml  godon_seeder.nim  godon_seeder.nimble  godon_seeder.sh
images/godon-seeder/src/: auth.rs  component.rs  main.rs
images/godon-seeder/tests/: docker-compose.test.yml  test_exit_code.nim  test_retry.nim  windmill-openapi.yaml
images/godon-seeder/tests/test_components/controller/: component.yaml  test_script.py
images/godon-seeder/tests/test_components/linux_network_stack/: component.yaml  optimizer.py
shared/tests/: deploy-stubs.sh  docker-compose.windmill.yml
shared/tests/stubs/: component.yaml  test_ansible_playbook.yml
shared/tests/stubs/controller/: breeder_create.py  breeder_delete.py  breeder_get.py  breeder_start.py  breeder_stop.py  breeder_update.py  breeders_get.py  credential_create.py  credential_delete.py  credential_get.py  credentials_get.py  target_create.py  target_delete.py  target_get.py  targets_get.py
shared/tests/stubs/test-data/: breeder-minimal.yaml  credential-invalid-type.yaml  target-invalid-type.yaml
shared/windmill_client/: config.nim  windmill_client.nim  windmill_client.nimble
