[package]
name = "godon-api"
# Version is static - actual versioning done via Docker image tags in Nix
version = "0.0.0"
authors = ["godon-dev Matthias Tafelmeier"]
edition = "2021"
description = "Godon Control API - RESTful API for managing optimizer breeders"
license = "AGPL-3.0"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
wmill = "1.659"
once_cell = "1.19"
