[package]
name = "godon-causal"
version = "0.0.0"
authors = ["godon-dev Matthias Tafelmeier"]
edition = "2021"
description = "Godon Causal — coupling graph construction and prediction from probe data"
license = "AGPL-3.0"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
