[package]
name = "godon-mcp"
version = "0.0.0"
authors = ["godon-dev Matthias Tafelmeier"]
edition = "2021"
description = "Godon MCP Server - Model Context Protocol interface for LLM agents to drive godon optimization"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
