[package]
name = "godon-observer"
version = "0.1.0"
authors = ["godon-dev Matthias Taflemaier"]
edition = "2021"
description = "Godon Observer - Metrics, trial data, and visualization dashboard"
license = "AGPL-3.0"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
prometheus = "0.13"
clap = { version = "4.0", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
